--- a/index.html
+++ b/index.html
@@ -2,33 +2,27 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GMB Partners | Performance local no Google</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f4f6f8;
+      background: #f9f9f9;
       color: #1a1a1a;
-      line-height: 1.6;
     }
 
     header {
-      background: linear-gradient(135deg, #0f264b, #1a3b6f);
-      color: white;
-      padding: 60px 20px 40px;
+      background: linear-gradient(135deg, #0f264b, #193d6f);
+      color: #fff;
+      padding: 80px 20px 60px;
       text-align: center;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     }
 
     header img {
-      max-width: 150px;
+      max-width: 160px;
       margin-bottom: 20px;
     }
 
@@ -40,54 +34,69 @@
     header p {
       font-size: 1.2em;
       opacity: 0.9;
+      max-width: 700px;
+      margin: 20px auto 0;
     }
 
     section {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 60px auto;
       padding: 0 20px;
     }
 
-    .pitch p,
-    .proposta p {
-      font-size: 1.1em;
-      margin-bottom: 20px;
-    }
-
-    .proposta h2,
-    .cta h2 {
+    h2 {
       font-size: 2em;
       margin-bottom: 20px;
       color: #0f264b;
     }
 
-    .proposta ul {
-      list-style: none;
-      padding-left: 0;
-      margin: 20px 0;
+    .pitch p, .proposta p {
+      font-size: 1.1em;
+      margin-bottom: 20px;
     }
 
-    .proposta ul li {
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
       margin-bottom: 10px;
-      padding-left: 28px;
       position: relative;
     }
 
-    .proposta ul li::before {
+    ul li::before {
       content: "✔";
-      position: absolute;
-      left: 0;
       color: #2e7d32;
       font-weight: bold;
+      position: absolute;
+      left: -20px;
+    }
+
+    .benefits {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .card {
+      background: #fff;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.06);
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
     }
 
     .cta {
       text-align: center;
-      margin-top: 80px;
+      margin-top: 60px;
     }
 
     .btn {
-      display: inline-block;
       background-color: #0f264b;
       color: #fff;
       padding: 14px 32px;
@@ -95,81 +104,113 @@
       text-decoration: none;
       font-weight: 600;
       font-size: 1.1em;
-      transition: all 0.3s ease;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      transition: 0.3s;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
     }
 
     .btn:hover {
-      background-color: #092044;
-      transform: translateY(-2px);
+      background-color: #091b34;
+      transform: scale(1.03);
+    }
+
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 14px;
+      border-radius: 50%;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+      text-decoration: none;
+      font-size: 24px;
+      z-index: 1000;
     }
 
     footer {
       text-align: center;
       padding: 30px 20px;
+      background-color: #eaeff4;
       font-size: 0.9em;
-      color: #666;
-      background-color: #e9ecef;
+      color: #555;
       margin-top: 60px;
     }
 
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 2em;
-      }
-
-      .btn {
-        width: 100%;
-        padding: 14px;
-      }
+      header h1 { font-size: 2em; }
+      .btn { width: 100%; padding: 14px; }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" />
-    <h1>GMB Partners</h1>
-    <p>Fazemos seu negócio aparecer onde mais importa.</p>
+    <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners">
+    <h1 data-aos="fade-up">GMB Partners</h1>
+    <p data-aos="fade-up" data-aos-delay="200">Fazemos seu negócio aparecer onde mais importa: no topo do Google.</p>
   </header>
 
-  <section class="pitch">
+  <section class="pitch" data-aos="fade-up">
     <p>
-      Negócios locais perdem até 40% dos clientes potenciais por estarem invisíveis no Google.
-      A <strong>GMB Partners</strong> aumenta em pelo menos 30% as ligações e visitas em até 60 dias.
-      Otimizamos seu perfil no Google Meu Negócio, geramos reviews 5 estrelas e colocamos sua empresa no topo das buscas — tudo sem depender de anúncios.
+      Negócios locais perdem até 40% dos clientes por estarem invisíveis no Google.
+      A <strong>GMB Partners</strong> aumenta chamadas e visitas em até 60 dias. Sem anúncios.
     </p>
-    <p><em>“Transformamos perfis invisíveis no Google em máquinas de chamadas e visitas locais. Mais visibilidade. Mais clientes. Sem anúncios.”</em></p>
+    <p><em>“Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.”</em></p>
   </section>
 
-  <section class="proposta">
+  <section class="proposta" data-aos="fade-up">
     <h2>Como ajudamos sua empresa</h2>
-    <p><strong>1. Quem somos:</strong> Consultoria especializada em gerar visibilidade local e resultados reais.</p>
-    <p><strong>2. O problema:</strong> Perfis mal otimizados, sem reviews ou estratégia, perdem clientes.</p>
-    <p><strong>3. A solução:</strong></p>
+    <p><strong>Problema:</strong> Perfis mal otimizados, sem reviews ou estratégia, perdem clientes todos os dias.</p>
+    <p><strong>Solução:</strong></p>
     <ul>
-      <li>Otimização completa do perfil no Google</li>
-      <li>Estratégia de palavras-chave locais</li>
-      <li>Aumento de reviews 5 estrelas</li>
-      <li>Postagens semanais com copy estratégica</li>
+      <li>Otimização completa no Google Meu Negócio</li>
+      <li>Palavras-chave locais estratégicas</li>
+      <li>Mais reviews 5 estrelas</li>
+      <li>Postagens semanais com copy</li>
       <li>Monitoramento e ajustes mensais</li>
     </ul>
-    <p><strong>4. Benefícios:</strong></p>
-    <ul>
-      <li>Topo da busca local</li>
-      <li>Mais ligações e visitas espontâneas</li>
-      <li>Reputação profissional elevada</li>
-      <li>Crescimento sem anúncios</li>
-    </ul>
   </section>
 
-  <section class="cta">
-    <h2>Vamos conversar?</h2>
-    <p>Entre em contato pelo WhatsApp ou ligue: <strong>(11) 95309-0058</strong></p>
-    <a href="https://wa.me/5511953090058" class="btn" target="_blank">Fale com um especialista no WhatsApp</a>
+  <section class="beneficios" data-aos="fade-up">
+    <h2>Benefícios Reais</h2>
+    <div class="benefits">
+      <div class="card" data-aos="fade-up" data-aos-delay="100">
+        <strong>Topo das buscas locais</strong>
+        <p>Conquiste visibilidade onde seus clientes estão procurando.</p>
+      </div>
+      <div class="card" data-aos="fade-up" data-aos-delay="200">
+        <strong>Mais ligações e visitas</strong>
+        <p>Clientes te encontram e entram em contato espontaneamente.</p>
+      </div>
+      <div class="card" data-aos="fade-up" data-aos-delay="300">
+        <strong>Reputação fortalecida</strong>
+        <p>Construção de credibilidade com reviews positivos e consistência.</p>
+      </div>
+      <div class="card" data-aos="fade-up" data-aos-delay="400">
+        <strong>Crescimento sem anúncios</strong>
+        <p>Resultados orgânicos, sustentáveis e duradouros.</p>
+      </div>
+    </div>
   </section>
+
+  <section class="cta" data-aos="fade-up">
+    <h2>Vamos conversar?</h2>
+    <p>Fale agora com um especialista:</p>
+    <a href="https://wa.me/5511953090058" class="btn" target="_blank">Fale no WhatsApp</a>
+  </section>
+
+  <a href="https://wa.me/5511953090058" class="whatsapp-float" title="Fale conosco no WhatsApp" target="_blank">💬</a>
 
   <footer>
     &copy; 2025 GMB Partners. Todos os direitos reservados.
   </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800,
+      once: true
+    });
+  </script>
 </body>
 </html>
