--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       text-align: center;
     }
 
-    header img {
-      max-width: 160px;
-      margin-bottom: 20px;
-    }
-
     header h1 {
       font-size: 2.8em;
       font-weight: 700;
@@ -42,6 +37,29 @@
       max-width: 1000px;
       margin: 60px auto;
       padding: 0 20px;
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Marca d’água da logo nas seções */
+    section::before {
+      content: "";
+      background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
+      background-size: 300px;
+      background-repeat: no-repeat;
+      background-position: center;
+      opacity: 0.03;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    section > * {
+      position: relative;
+      z-index: 2;
     }
 
     h2 {
@@ -145,7 +163,6 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners">
     <h1 data-aos="fade-up">GMB Partners</h1>
     <p data-aos="fade-up" data-aos-delay="200">Fazemos seu negócio aparecer onde mais importa: no topo do Google.</p>
   </header>
