--- a/index.html
+++ b/index.html
@@ -8,46 +8,34 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
+      margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth;
     }
-
     body {
       font-family: 'Inter', sans-serif;
       background: #f9f9f9;
       color: #1a1a1a;
     }
-
     header {
       background: linear-gradient(135deg, #0f264b, #193d6f);
       color: #fff;
       padding: 80px 20px 60px;
       text-align: center;
     }
-
     header h1 {
-      font-size: 2.8em;
-      font-weight: 700;
+      font-size: 2.8em; font-weight: 700;
     }
-
     header p {
       font-size: 1.2em;
       opacity: 0.9;
       max-width: 700px;
       margin: 20px auto 0;
     }
-
     section {
       max-width: 1000px;
       margin: 60px auto;
       padding: 0 20px;
-      position: relative;
-      z-index: 1;
+      position: relative; z-index: 1;
     }
-
-    /* Marca d’água */
     section::before {
       content: "";
       background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
@@ -56,39 +44,28 @@
       background-position: center;
       opacity: 0.03;
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
+      top: 0; left: 0; width: 100%; height: 100%; z-index: 0;
     }
-
     section > * {
-      position: relative;
-      z-index: 2;
+      position: relative; z-index: 2;
     }
-
     h2 {
       font-size: 2em;
       margin-bottom: 20px;
       color: #0f264b;
     }
-
     .pitch p,
     .proposta p {
       font-size: 1.1em;
       margin-bottom: 20px;
     }
-
     ul {
       padding-left: 20px;
     }
-
     ul li {
       margin-bottom: 10px;
       position: relative;
     }
-
     ul li::before {
       content: "✔";
       color: #2e7d32;
@@ -96,14 +73,12 @@
       position: absolute;
       left: -20px;
     }
-
     .benefits {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
       margin-top: 30px;
     }
-
     .card {
       background: #fff;
       padding: 24px;
@@ -111,21 +86,37 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.06);
       transition: transform 0.3s;
     }
-
     .card:hover {
       transform: translateY(-4px);
+    }
+
+    /* Portfólio */
+    .portfolio {
+      margin-top: 40px;
+    }
+    .portfolio-grid {
+      display: grid;
+      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+    .portfolio-grid img {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
+    .portfolio-grid img:hover {
+      transform: scale(1.05);
     }
 
     .cta {
       text-align: center;
       margin-top: 60px;
     }
-
     .cta p {
       margin-bottom: 20px;
       font-size: 1.1em;
     }
-
     .btn {
       background-color: #0f264b;
       color: #fff;
@@ -136,12 +127,45 @@
       font-size: 1.1em;
       transition: 0.3s;
       box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
     }
-
     .btn:hover {
       background-color: #091b34;
       transform: scale(1.03);
+    }
+    .btn .wa-icon {
+      margin-right: 8px;
+      font-size: 1.2em;
+    }
+
+    /* Formulário */
+    .contato form {
+      display: grid;
+      gap: 15px;
+      margin-top: 20px;
+    }
+    .contato input,
+    .contato textarea {
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1em;
+      resize: vertical;
+    }
+    .contato button {
+      background-color: #0f264b;
+      color: white;
+      padding: 14px 0;
+      border: none;
+      border-radius: 8px;
+      font-size: 1.1em;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .contato button:hover {
+      background-color: #091b34;
     }
 
     .whatsapp-float {
@@ -171,10 +195,9 @@
       header h1 {
         font-size: 2em;
       }
-
       .btn {
         width: 100%;
-        padding: 14px;
+        justify-content: center;
       }
     }
   </style>
@@ -187,23 +210,20 @@
   </header>
 
   <section class="pitch" data-aos="fade-up">
-    <p>
-      Negócios locais perdem até 40% dos clientes por estarem invisíveis no Google.
-      A <strong>GMB Partners</strong> aumenta chamadas e visitas em até 60 dias. Sem anúncios.
-    </p>
+    <p>Negócios locais perdem até 40% dos clientes por estarem invisíveis no Google. A <strong>GMB Partners</strong> aumenta chamadas e visitas em até 60 dias. Sem anúncios.</p>
     <p><em>“Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.”</em></p>
   </section>
 
   <section class="proposta" data-aos="fade-up">
     <h2>Como ajudamos sua empresa</h2>
-    <p><strong>Problema:</strong> Perfis mal otimizados, sem reviews ou estratégia, perdem clientes todos os dias.</p>
+    <p><strong>Problema:</strong> Perfis mal otimizados, sem reviews ou estratégia, perdem clientes.</p>
     <p><strong>Solução:</strong></p>
     <ul>
-      <li>Otimização completa no Google Meu Negócio</li>
-      <li>Palavras-chave locais estratégicas</li>
+      <li>Otimização no Google Meu Negócio</li>
+      <li>Palavras-chave locais</li>
       <li>Mais reviews 5 estrelas</li>
-      <li>Postagens semanais com copy</li>
-      <li>Monitoramento e ajustes mensais</li>
+      <li>Postagens semanais</li>
+      <li>Monitoramento mensal</li>
     </ul>
   </section>
 
@@ -212,27 +232,49 @@
     <div class="benefits">
       <div class="card" data-aos="fade-up" data-aos-delay="100">
         <strong>Topo das buscas locais</strong>
-        <p>Conquiste visibilidade onde seus clientes estão procurando.</p>
+        <p>Visibilidade onde seus clientes estão.</p>
       </div>
       <div class="card" data-aos="fade-up" data-aos-delay="200">
         <strong>Mais ligações e visitas</strong>
-        <p>Clientes te encontram e entram em contato espontaneamente.</p>
+        <p>Clientes entram em contato espontaneamente.</p>
       </div>
       <div class="card" data-aos="fade-up" data-aos-delay="300">
         <strong>Reputação fortalecida</strong>
-        <p>Construção de credibilidade com reviews positivos e consistência.</p>
+        <p>Credibilidade com reviews consistentes.</p>
       </div>
       <div class="card" data-aos="fade-up" data-aos-delay="400">
         <strong>Crescimento sem anúncios</strong>
-        <p>Resultados orgânicos, sustentáveis e duradouros.</p>
+        <p>Resultados orgânicos sustentáveis.</p>
       </div>
     </div>
+  </section>
+
+  <section class="portfolio" data-aos="fade-up">
+    <h2>Portfólio</h2>
+    <div class="portfolio-grid">
+      <img src="https://via.placeholder.com/400x250?text=Projeto+1" alt="Projeto 1">
+      <img src="https://via.placeholder.com/400x250?text=Projeto+2" alt="Projeto 2">
+      <img src="https://via.placeholder.com/400x250?text=Projeto+3" alt="Projeto 3">
+      <img src="https://via.placeholder.com/400x250?text=Projeto+4" alt="Projeto 4">
+    </div>
+  </section>
+
+  <section class="contato" data-aos="fade-up">
+    <h2>Entre em contato</h2>
+    <form action="https://formsubmit.co/SEUEMAIL@exemplo.com" method="POST">
+      <input type="text" name="nome" placeholder="Seu nome" required>
+      <input type="email" name="email" placeholder="Seu e-mail" required>
+      <textarea name="mensagem" rows="5" placeholder="Sua mensagem" required></textarea>
+      <button type="submit">Enviar mensagem</button>
+    </form>
   </section>
 
   <section class="cta" data-aos="fade-up">
     <h2>Vamos conversar?</h2>
     <p>Fale agora com um especialista:</p>
-    <a href="https://wa.me/5511953090058" class="btn" target="_blank">Fale no WhatsApp</a>
+    <a href="https://wa.me/5511953090058" class="btn" target="_blank">
+      <span class="wa-icon">💬</span> Fale no WhatsApp
+    </a>
   </section>
 
   <a href="https://wa.me/5511953090058" class="whatsapp-float" title="Fale conosco no WhatsApp" target="_blank">💬</a>
