--- a/index.html
+++ b/index.html
@@ -208,19 +208,24 @@
 
   /* WhatsApp fixo */
   .whatsapp-float {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #25D366;
-    color: white;
-    padding: 16px;
-    border-radius: 50%;
-    box-shadow: 0 6px 14px rgba(0,0,0,0.25);
-    text-decoration: none;
-    font-size: 26px;
-    z-index: 10001;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  color: white;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+  text-decoration: none;
+  font-size: 26px;
+  z-index: 10001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
   .whatsapp-float:hover {
     background-color: #1ebe57;
     transform: scale(1.1);
