--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease, transform 0.2s ease;
   }
   nav a:hover, nav a:focus {
-    color: #25D366;
-    outline: none;
-  }
+  color: #25D366;
+  transform: scale(1.08);
+  outline: none;
+}
 
   /* Espaço para o header fixo */
   body {
