--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
     cursor: pointer;
   }
 
-  nav a {
-    color: #fff;
-    margin-left: 28px;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1rem;
-    transition: color 0.3s ease, transform 0.2s ease;
-  }
-  nav a:hover, nav a:focus {
-  color: #25D366;
-  transform: scale(1.08);
+ nav a {
+  color: #fff;
+  margin-left: 28px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+  transition: font-size 0.2s ease;
+}
+nav a:hover, nav a:focus {
+  font-size: 1.1rem;
   outline: none;
 }
 
