--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
   text-decoration: none;
   font-weight: 600;
   font-size: 1rem;
-  transition: font-size 0.2s ease;
+  transition: color 0.3s ease, transform 0.2s ease;
 }
 nav a:hover, nav a:focus {
-  font-size: 1.1rem;
+  color: #25D366;
+  transform: scale(1.08);
   outline: none;
 }
 
