--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@ nav a:hover, nav a:focus {
 <header>
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
-    <a href="#pitch">Home</a>
-    <a href="#proposta">Serviços</a>
-    <a href="#beneficios">Benefícios</a>
-    <a href="#contato">Contato</a>
+    <a href="#pitch">🏠 Home</a>
+    <a href="#proposta">🛠️ Serviços</a>
+    <a href="#beneficios">🎯 Benefícios</a>
+    <a href="#contato">📞 Contato</a>
   </nav>
 </header>
 
